# simple-pico-project-template

./: CMakeLists.txt
src/: main.cpp
